platform_versioned_docs/version-23.1/enterprise/release_notes/changelog.mdx
---
title: "Tower Enterprise changelog"
description: "Changelog for releases of Tower Enterprise"
date: "21 Apr 2023"
tags: [changelog]
---

## 2023

### 23.1.0 - 28 Apr 2023

- Add Fusion logs download (#4385) [49eb6dbe]
- Add Fusion support for Google Batch (#4654) [968d9fb1]
- Add missing launch option in pipeline action menu (#4441) [56313780]
- Add source reference to launch entity (#4527) [bd073128]
- Add support for AWS Parameters Store (#4563) [0f9f5400]
- Add teams management to admin panel (#4553) [8e019921]
- Add Save run as pipeline (#4610) [a14e1280]
- Add workspace selection in All runs page [b574db06]
- Add Launchpad redesign with list and cards views (#4110) [92345120]
- Add ability to export dashboard data as CSV (#4463) [765931ad]
- Add azure repos credentials (#4012) [f03f8a55]
- Add the possibility to customize the log format (#4558) [3891345c]
- Add Wave pairing via websockets (#4624) [cf16292e]
- Add dashboard stats date filter (#4575) [86e95d3e]
- Add AWS_MAX_ATTEMPTS and AWS_RETRY_MODE to Batch launch environment (#4738) [e7ec2c96]
- Allow S3 PutObjectTagging to instance role created by Batch Forge (#4511) [c8c8e76a]
- Allow exact match search filters (#4396) [d90acc18]
- Allow to share a Tower Agent connection (#4395) [1cfaee91]
- Allow the customization prefix of Batch Forge resources (#4693) [67072462]
- Move workflow deletion audit event to service method (#4531) [9b56ad79]
- Remove required check from "headQueue" field in grid platform providers (#4655) [782ab02d]
- Improve Fusion v2 support for EBS disk (#4740) [e1d280d1]
- Improve config properties documentation reference (#4757) [01d08d9d]
- Improve support for AWS SSM as Params store (#4824) [3e2c568d]
- Improve trace service removing blocking queue (#4427) [1c788612]
- Increase 10 min length for pwd hint (#4606) [6adaba95]
- Deprecate Fusion v1 (#4694) [74fb5bd6]
- Fix: partial failure workflow status icon shows green check (#4371) [981aeb26]
- Fix: Missing AWS Cloudstream logs (#4476) [3d88a618]
- Fix: NPE when retrieving progress usage data (#4621) [85c4836c]
- Fix: bug that throws ConcurrentModifactionException while cancelling tasks (#4656) [9d0eda97]
- Fix: cancellation of a workflow already terminated (#4622) [d665beeb]
- Fix: "Row size too large" MySQL problem (#4688) [793471da]
- Fix: Incorrect loading of Runs page after launching a pipeline (#4530) [b297bf42]
- Fix: make OAuth 2 cookies secured (#4478) [904e1e2d]
- Fix: Return HTTP 503 error when Redis is not available (#4605) [fa88e17d]
- Fix: Set name on FSx file system create by Tower (#4393) [cb631a72]
- Fix: Dataset's page CSV viewer crashes if there is an empty column and first row as header is checked (#4489) [21275c9a]
- Fix: Handle unexpected error when accessing Azure repos with node creds (#4707) [6df882f0]
- Fix: Relaunch workflow form does not populate the CE field if initial CE was deleted (#4538) [1fc7494f]
- Fix: do not show incomplete text on Launchpad for Launcher users (#4495) [1ed88626]
- Fix: navigate to Pipeline detail from "Pipeline successfully saved" notification (#4774) [0420c0d8]
- Fix: prevent changing launch work dir inside pipeline input form (#4408) [496827ea]
- Fix: properly display default Launchpad sort option (#4492) [1e712aa3]
- Fix: remove duplicate ECS config input in AWS CE form (#4423) [52d057ab]
- Fix: remove secrets controls if CE does not support them (#4714) [f3137ca7]
- Fix: restore Launchpad loading indicator (#4509) [9b3fbc26]
- Fix: sanitize characters in job and workflow error text messages (#4712) [0e6b2b7d]
- Fix: tag correctly compute environment and service role when resource (#4379) [ed96b5a6]
- Fix: workflow deletion failure when has a launch record associated (#4786) [9778e579]
- Fix: workflow launch form autoselects CE when workspace is shared (#4744) [9b6c5df8]
- Bump version nf-launcher:j17-23.04.1 [72eaa795]
- Bump Micronaut to version 3.8.5 (#4324) [79c1e50c]

### 22.4.2 - 21 Feb 2023

- Fix: issue retrieving execution logs from CloudWatch (#4476) [638513b7]
- Fix: issue setting AWS CloudWatch custom log group name (#4475) [f020719c]
- Chore: Improve cloudwatch labels (#4498) [69b790fa]
- Bump: nf-launcher:j17-22.10.7 [a7b6fd26]

### 22.4.1 - 10 Feb 2023

- fix: add auto height to selectable columns (#4409) [e4f62488]
- fix: remove duplicate ECS config input in AWS CE form (#4423) [3dbb0dad]

### 22.4.0 - 6 Feb 2023

- Feat: All workflow runs page (#3777) [b89ba895]
- Feat: Refresh the dashboard data every 5 seconds (#3935) [dd65935d]
- Feat: Support for Gitea provider (#3995) [c1640d7b]
- Feat: Allow resume workflow in different CEs having compatible work directory (#4169) [ae782606]
- Feat: AWS Batch ECS custom configuration [1a5faf12]
- Feat: Wave pairing naming refactor (#4300) [c9c9dc8f]
- Feat: Pipeline and workflow resource labels customization (#3955) [b1fa9756]
- Add `europe-west2` location for Google Batch (#4203) [8bfda45c]
- Add missing lvm2 package to be able to mount multiple NVMe disks as a single volume (#4091) [4ffba872] [80c72e1c]
- Add support for custom CloudWatch logs group name (#3866) [97156c57]
- Add missing sourceWorkspaceId OpenAPI parameters (#4050) [72fa1822]
- Add Fusion NVMe support (#3942) [9ea72cc9]
- Add credentials/keys endpoint [25906e00]
- chore: gh actions workflows updates to suppress deprecation warnings (#4342) [b9bce117]
- chore: implements patch gcp registry credentials to remove newlines (#4307) [aed573ff]
- chore: Increase pipeline/projectName limit to 200 chars (#4317) [beb79d8d]
- chore: Run status time enhancements (#4289) [69848871]
- chore: Task 2882/add validation for custom role (#4068) [86967166]
- chore: Increase prod labels limit to 1k [9e5cccd9]
- chore: Update AWS regions (#4118) [99d7f6bb]
- chore: Revert FSx unmount (#4177) [199eb24b]
- chore: When running with Gitpod, create valid AWS credentials with assume role (#4114) [7ed1491f]
- chore: Improve task duration stats (#4106) [4a51d956]
- chore: update workflow status timing messages (#4075) [9939145b]
- chore: [BREAKING] remove autoinjection of roles when allowInstanceCredentials property is true (#4093) [5de61137]
- chore: Limit the time range selection when querying stats (#3993) [e273130d]
- chore: Cache restore and backup via Tower plugin (#3599) [719442fb]
- chore: Set BEST_FIT_PROGRESSIVE as default AWS Batch allocation strategy (#3956) [6442dcd8]
- test: Create Playwright e2e tests for Google Life Sciences CEs (#3899) [ba1c1254]
- Fix: prevent calling BE with undefined workspaceId (#4349) [25943dd3]
- Fix: Re-launch of Tower actions should preserve parameters (#4270) [2a232104]
- Fix iframe for HTML reports (#4135) [bb878118]
- Fix: Azure CE creation fails in CI because of auto-scaling formula (#4180) [35543dd4]
- Fix: replace clr running color with the proper primary one (#4222) [8e424cf5]
- Fix: add explicit 'Authorization' header as param name to security scheme in order to fix issue with wrong header in OpenAPI GUI requests (#4218) [48fdb2fa]
- Fix: improve search syntax error handling (#4020) [a19ffbd5]
- Fix AWS Batch kernel issue causing OOM error (#4015) [7a8c5488]
- Fix: move authentication method to private app for hubspot (#3960) [a8aa6e79]
- Fix: additional joins for audit publisher entity (#3934) [23deb598]
- bump Upgrade to Java 17 (#3973) [2e915336]
- Bump nextflow 22.10.6 in get started page [28f44796]
- Bump nf-launcher:j17-22.10.6 [570658c5]
- Bump Upgrade backend to Micronaut 3.7 (#3876) [11203a05]

### 22.3.2 - 9 Feb 2022

- nf-launcher:j17-tw-22.3-nf-22.10.6

## 2022

#### 22.3.1 - 12 Dec 2022

- Bump nf-launcher:j17-22.10.4 [26da757f]
- Fix: Remove autoinjection of roles when allowInstanceCredentials property is true [BREAKING] (#4093) [1d6adc9f]
- Fix AWS Batch kernel issue causing OOM error (#4015) [f59b9edd]

#### 22.3.0 - 4 Nov 2022

- Add support for Google Batch (#3532) [ba641280]
- Add support for Resource Labels (#3511) [1fa2dc7e]
- Add support for Resource Labels for Google Batch (#3836) [157f3cd8]
- Add support for Wave + Fusion (#3713) [0f49a7cb]
- Add users and orgs management to admin panel (#3659) [9fda24b6]
- Add ability to expand boot EBS volume size (#3299) (#3425) [b523c5dc]
- Add Runs dashboard page (#3734) [35073fdb]
- Add support for txt reports preview (#3862) [bba73371]
- Add confirmation dialog enhancements (#3470) [bd19b70d]
- Add unmount FSx lustre filesystem on SPOT instance termination (#3430) [155c8a7b]
- Add run detail page link to both html and txt email templates (#3907) [58f5ef4e]
- Add Allow organization owners to access all workspaces in the organization (#3703) [a0fad25f]
- Fix: 3423 optimization configuration not retained on re launch (#3841) [19b4bbe4]
- Fix: 3654 regression optimization column in workflow list lost (#3655) [10471ade]
- Fix: 3769 delete confirmation message allows prompts to be bypassed without entering delete in the text box (#3770) [ba442e24]
- Fix: 3773 invalid unit for vol ctxt and inv ctxt at tasks table (#3774) [0e34ae0e]
- Fix: BitBuckerServer Git provider #3670 [c91635b0]
- Fix: container registry name (#3708) [1f42959e] [9dd37809]
- Fix: missing file existance check for GLS in nf-launcher [7ca43e51]
- Fix: resume functionality on Google Life Sciences (#3539) [10419c93]
- Fix: stalling on failing local submit (#3492) [ea82e5f4]
- Fix: "Pre-run script" errors are not displayed in the logs (#3484) [65134954]
- Fix: Cannot add optimization status to unknown response object (#3450) [ac1fd478]
- Fix: Invalid unit in the tasks table (#3714) [53399902]
- Fix: Resume does not work when user has "launch" permission (#3072) [15433b31]
- Fix: Unable to save status for job when a DB exception occurs (#3490) [9788ace0]
- Fix: escape qstat command for Altair PBS batch scheduler (#3489) [adb2b773]
- Fix: failing test due to phantom job interval on Mysql (#3537) [b4249066]
- Fix: trim sub-second precision from dates (mysql compat) (#3788) [2ade7174]
- Fix: disallow dashes in secret names (#3643) (#3644) [81d09056]
- Fix: invalid job transition to unknown status [ci fast] [65f44fc2]
- Fix: Resource label input parses whole word before '=' (#3847) [12d6b09d]
- Make stage url config (#3700) [b7219259]
- Open up all endpoints and parameters related to labels and resource labels (#3814) [bf9a30e8]
- Restyling of workflow detail header (#3547) [d2024f66]
- Update xpack urls [BREAKING] [700436e5]
- [BREAKING] Add batch:TagResource to Batch instance role [dba6cb34]
- chore: restore workflow reports messaging (#3802) [9640254a]
- chore: Bad request response when query parameters are malformed (#3649) [376def9c]
- fix: admin tests race condition (#3868) [977fbff1]
- fix: Gray screen when navigating back after opening a task detail (#3873) [3a04872a]
- fix: add ListWorkspaceSettings permission to admin and maintainer (#3453) [d9bae03a]
- fix: added new query for star row deletion and modified test (#3514) [459bc3e4]
- fix: broken labels input formcontrol binding (#3656) [139e633a]
- fix: broken quick-launch page layout on personal workspace (#3495) [ebd0cf11]
- fix: Increase the quota limit for datasets (and dataset versions) per workspace to 100 (#3673) [818c4bf5]
- fix: bypass name checks if the label name has not changed (case-insensitive) (#3578) [293e5478]
- fix: case-insensitive search for orgs and users (#3739) [766d8056]
- fix: datasets suggestions for pipelines with schemas that expect tsv type (#3582) [1f48e0de]
- fix: disable ngx-bootstrap collapsible component animation (#3727) [a13dcecc]
- fix: highlight support nav button when in welcome page (#3798) [312f1c91]
- fix: humanize values for duration and realtime in tasks table (#3707) [30819908]
- fix: include personal workspace as possible value for last accessed workspace item in local storage (#3885) [151b708a]
- fix: inconsistent navigation to an organization when the organization name matches a resource label name [e2e] (#3685) [d045ac0c]
- fix: inherit from DataSpecification (#3745) [be04f004]
- fix: lazy load workflow details page main tabs (#3857) [8e504625]
- fix: make routing service always get routeContext from params when requested [e2e] [ci fast] [a6baca64]
- fix: Check for `workspace id` in the endpoint URL of an action in the workspace context (#3464) [db80231f]
- fix: move credentials keys patching/removal logic into credentials component base (#3765) [4537df99]
- fix: prevent double task endpoint invocation (#3830) [49a14f6e]
- fix: prevent null reference exception on humanizeCounter formatter util (#3785) [e5810dec]
- fix: redirect to personal workspace if user is not a participant in any workspace (#3683) [21e98d3c]
- fix: redirect to the last route on login after jwt token failed to refresh (#3619) [7ec1cfe3]
- fix: remove deprecated share button (#3496) [55b47cd3]
- fix: restore inline credentials creation functionality for grid platforms (#3542) [8707a05e]
- fix: restore moab platform icon (#3821) [e6688528]
- fix: restore tasks table column formatters after migration to mat table [e2e] (#3787) [009f5e76]
- fix: restore vertical scroll inside inputs (#3853) [df65253c]
- fix: set resume param depending on workflow completion status [e2e] (#3572) [177a7805]
- fix: show actionable error message on unparsable config file (#3451) [3cfd96d6]
- fix: small visual bugs fixes (#3837) [ci fast] [1b0a685b]
- fix: wrong launchpad layout when pipeline names are long (#3527) [318b02b3]
- tweak: switch typing method to help prompt display (#3698) [c31b02f3]
- tweak: Required/optional field labels enhancement (#3544) [e7f08557]
- tweak: allow path variables for grid platform launch directory field (#3883) [6ed1eba6]
- tweak: apply standard glob sorrounding to task list search (#3672) [d66c8740]
- tweak: Check that users with invalid names are not rejected when registering (#3816) [02e89664]
- tweak: move repo link to repo name in workflow detail header (#3564) [44fdd0ba]
- tweak: pass date filters when clicking on the run stat inside the dashboard page (#3901) [5cfda8b6]
- tweak: remove confirmation input from cancel workflow prompt [5d3aca10]
- tweak: remove redundant logs.length from log view (#3446) [794cbe3b]
- tweak: set max length of revision field to 100 characters (#3882) [4040166c]
- tweak: Enable angular strict template checking (#3596) [a569e5fe]
- tweak: Display provider icon in credentials/CE selection dropdowns, encapsulate in icon component (#3690) [8a4c7ffd]
- tweak: Do not allow email using a top-level domain hostname (#3526) [0bae08ca]
- tweak: Email validators are out of sync (FE side) (#3778) [0d564656]
- tweak: Establish use of english locale globally in tower-web (#3679) [a40d0483]
- tweak: customize the head node resources in the launch/relaunch form (#3448) (#3449) [42caa475]
- tweak: update pages layout (#3481) [24fc32cf]
- tweak: Improve SSH connector resilience + UGE qstat [cbdab74d]
- Bump nf-launcher:j17-22.10.1 [ci fast] [bfc1ea0d]
- Bump angular 14 (#3660) [130f0ffc]

#### 22.2.4 - 2 Sept 2022

- Bump the quota limit for dataset per workspace to 100 (#3673) [c8df0e6]
- Fix BitBuckerServer Git provider #3670 [3b4172b]

#### 22.2.3 - 11 Aug 202

- Rollback to nf-launcher:j17-22.06.1-edge [135f5d59]

#### 22.2.2 - 8 Aug 202

- Bump nf-launcher@22.08.0-edge [786d43be]
- Fix resume functionality on Google Life Sciences (#3539) [5b2a50b7]
- fix: remove deprecated share button (#3496) [5af149f8]

#### 22.1.8 - 8 Aug 2022

- Fix resume functionality on Google Life Sciences (#3539) [5b389773]

#### 22.2.1 - 5 Aug 2022

- feat: unmount FSx lustre filesystem on SPOT instance termination
- fix: escape qstat command for Altair PBS batch scheduler
- fix: improve SSH connector resilience + UGE qstat
- fix: Patch invalid job transition to unknown status

#### 22.1.7 - 25 Jul 2022

- Improve SSH connector resilience + UGE qstat [755b6ce4][8e876d22]

#### 22.2.0 - 15 Jul 2022

##### Breaking Changes

- The MySql DB driver com.mysql.cj.jdbc.Driver has been replaced by org.mariadb.jdbc.Driver.
  Env variable `TOWER_DB_DRIVER` referencing the first should be changed with the latter.

##### Other Changes

- feat: Added support for Illumina DRAGEN
- feat: Added support to mysql8
- feat: Allow access remote pipelines via Tower Agent
- feat: Feature 3025 reports download limit
- feat: Adds used datasets tab to run details page
- feat: Add support for redis password
- feat: pipeline reports index page
- feat: Feature 2663 / Labels
- feat: Add support for AWS CodeCode repositories
- feat: runName filled with random run name by default if not in relaunch mode
- feat: Allow the ability to send cluster options from head queue to child nodes
- feat: Add advanced search capabilities to runs page
- fix: error when trying to remove unexistent csv renderer options component
- fix: invalid escape of blank chars in URL [ci fast]
- fix: issue download report with blanks
- fix: Nginx proxy pass decoding
- fix: Solves #3077 by modifying the validation logic
- fix: set dataset file mime type depending on file extension
- fix: Use mdiag command to check MOAB platform
- fix: Do not force a main.nf file at default branch when creating a pipeline
- fix: suggest valid runName when launcher resumes
- fix: Populate timestamps for partial workflow progress updates
- fix: Enable maintainers to create workspace secrets
- fix: prevent infinite redirection when landingUrl = applicationUrl
- fix: Change MOAB queue status command
- fix: hide workflow run datasets tab in the personal workspace context
- fix: Add the support for USR2 signal for grid providers launcher script
- fix: Fix perms for encrypted bucket
- fix: missing dataset in workflow run page
- fix 3309 compute environment not visible when viewing actions
- fix: multiple dropdown menus remain when selecting
- fix: IllegalArgumentException on empty config file
- fix: Can't re-launch failed workflow without commit
- fix: cancel button malfunctions in most menus where elements get added
- fix: prevent the deletion of a CE when the status is CREATING.
- fix: produce two different entries for custom user config and optimized config.
- fix: tweak: remove "None" item from select inputs when the field is required
- fix: fixed the case when optimization config was not shown for workflow details page
- fix: Disallow relative path workdir
- fix: Use NotFound exception at Google LS provider
- chore: update ENVIRONMENT*VARIABLE_NAME regex to allow NXF* env variables
- chore: update computeJobRole and headJobRole validation
- chore:Bump ebs-autoscale to version 2.4.6-6ce65d32 [ci fast]
- chore: Add KMS permissions required by EBS autoscale
- chore: Upgrade to Micronaut 3.4.x
- chore: typography sync between tower and design

* Full Changelog: v22.1.5-enterprise...v22.2.0-rc0-enterprise

#### 22.1.6 - 15 Jul 2022

- Patch invalid job transition to unknown status [5ac1a4fd]

#### 22.1.5 - 7 Jun 2022

- Fix perms for encrypted bucket [96f00f39]
- Add the support for USR2 signal to launcher script [40c4ab68]

#### 22.1.4 - 1 Jun 2022

- Enable maintainers to create workspace secrets [2d1a225f]
- Forward revision when creating a pipeline (#3203) [2ff2f171]
- Change MOAB queue status command (#3219) [4eda7f90]

#### 22.1.3 - 18 May 2022

- Update Nextflow to 22.04.3
- Bump nf-launcher:j17-22.04.3
- Bump nf-jdk:corretto-11.0.15_up1

#### 22.1.2 - 9 May 2022

- fix: Add KMS permissions required by EBS autoscale with encrypted volumes [387ed6c3]
- fix: Update HTTP content security policy to allow host URLs for frames and workers [327b27ac]
- fix: Minor navigation error when removing unexistent CSV renderer component [a501225c]
- fix: Issue downloading a report with containing a blank character [70ab2033]
- fix: Nginx proxy pass decoding break query parameters with blank character [48a2ef6b]
- fix: Kubernetes control plan URL only allow host name [1b4b1240][da552afc]
- Bump ebs-autoscale to version 2.4.6-6ce65d32 [d52de172]

#### 22.1.1 - 25 Apr 2022

- Add EBS encrypt role policy at AWS forge creation (#2817) [ci fast]
- Add TOWER_ENABLE_UNSAFE_MODE setting to allow cookies over HTTP (#3023) [69100d51]
- Allow NXF env variables (#3026) [553015d8]
- Fix azcopy cache commands (#3022) [4932a54d]
- Fix AES regular expression [a7b1ed02]
- Fix update CSP to allow captcha frame [a984ec39]
- Fix download of task log files (#3004) [3389a8d7]
- Fix Dataset table is not rendered in Safari [ab297ff4]
- Fix avoid analytics service making calls when there's no analytics url (#2991) [fd56afab]
- Fix NF version in welcome page [c5c8492c]
- Remove log trace from workflow limiter [64f8161e]
- Improve cloud price download logs [a0e69b57]
- Bump nf-launcher:j17-22.04.0 [9e55c873]
- Bump nf-jdk:corretto-11.0.15 as base image [1832c282]

#### 22.1.0 - 12 Apr 2022

- Add secure cookies [e28a3388]
- Add GetLogsEvents perm to AWS Batch instance role [04b18668]
- Add credentials view page [f3c63483]
- Add ECS pull strategy in user-data template [e1b4914a]
- Add root users environment when `TOWER_ROOT_USERS` variable is provided [e09db3e5]
- Add Tower system message
- Add support for JSON formatted logs [92122adb]
- Add support for AWS agent and logging [6e68fd98][c080e9d4]
- Add navigate back button to second level screens (#2578) (#2623) (5 weeks ago)
- Add validation for SSH hostname and username [d0115de0][efb962bf]
- Add config option to disable user private workspace [9e667bc0]
- Add share run deprecation banner
- Allow partial searches [b8788b38]
- Allow the use S3 bucket work dir along with EFS or FSx mounts [368d5caa]
- Upload encrypted files at AWS S3 [40b87a2e]
- Use default listening port (80) [a64852d9]
- Improve secrets obfuscation in log file [7e52c76b]
- Improve EBS autoscaling [fe7fe728]
- Increase tower config max size to 3500 character [a01ee72c]
- Disable resume for failed workflows [3c2c7ad3]
- Set max length validator to the workflow launch form fields [5326114b]
- Check valid EFS and FSx mount points [633fdcd8]
- Make Dataset api public (#2240) [2fd32c51]
- Upgrade Angular 13
- Upgrade Micronaut 3.x (#2364)
- Upgrade logback to version 1.2.8 (#2418)
- Bump log4js from 6.3.0 to 6.4.0 in /tower-web (#2535)
- Bump base image nf-jdk:corretto-11.0.14_2
- Bump nf-launcher 22.03.1-edge
- Increase agent websockets payload size to 5Mb [5f3e5428]
- 484005bd - Always retry NF process when using AWS sport instances
- fe7fe728 - Improve EBS autoscaling (8 days ago)
- 8dc800c2 - feature: improve parse the pipeline schema
- Default to Nextflow DSL version 1 [e88a3e59]
- Fix job status is updated in the in-memory tracker before running the job in the local CE platform (#2460) (3 months ago)
- Fix normalize dataset name [fcbe417d]
- Fix Allow dot in AWS ARN string [d5c5cd9e]
- Fix issue with K8s compute env stalling in creating status [72c03cd9]
- Fix set cookie acceptance cookie path to / [e2e](#2773) [ba0cae7a]
- Fix EFS and FSx permission when job run with non-root user (#2659) [0e169bb9]
- Fix reports at grid and agent platforms [ba397137]
- Fix load SLURM CE details in view mode [80cc0e9b]
- Fix Display dates with YYYY-MM-DD format on runs page [830606af]
- Fix Unable to download execution log from a workflow with working directory specified just as "bucket" name [d025917c]
- Fix Prevent the creation of Spot fleet role [95acea2c]
- Fix Prevent deletion of an active workflow run [ba1f1ce9]
- Fix Prevent XSS attacks when uploading a datatable file [#2944] (6d98210c)
- 8759d92e - Validate launch/re-launch action depending the user role
- d6113805 - Bump base image nf-jdk:corretto-11.0.14_2 [ci fast]

#### 21.12.3 - 31 Mar 2022

- Bump base image nf-jdk:corretto-11.0.14_2 [8cc71b91]

#### 21.12.2 - 31 Mar 2022

- Create /.nextflow folder in backend container [333a8a68]
- Fix: issue with K8s compute env stalling in creating status [3745e793]
- Fix: Upload encrypted files at AWS S3 [716d2938]
- Fix: EFS/FSx permission when using non-root container (#2659) [002f4426]
- Bump nf-launcher:j17-21.10.6 [8b3d6490]

#### 21.12.1 - 3 Feb 2022

- Disable H8 stats verbose logging [7e5e08b0]
- Enable root users environment when TOWER_ROOT_USERS variable is provided [390e079a]
- Fix: reports endpoint exception on NF cli workflows [c310c3cf]

#### 21.12.0 - 17 Jan 2022

- Add shared workspace feature
- Add Pipeline reports feature [preview]
- Add Dataset public APIs
- Add Tower agent reverse connection
- Add Dataset api public [ci fast](#2240) [942f3f4e3]
- Prevent the use of master as default branch (#2499) [791f45a11]
- Update resources descriptions [538069df9]
- Allow the use of S3 as work directory when using EFS and FSx mounts [6199d8fd6]
- Display dates with YYYY-MM-DD format on runs page [5d2f3215a]
- Change email template office address [5edfa3a26]
- Increase agent websockets payload size to 5Mb [4ce9af8f2]
- Fix: auto-normalize inline credentials name (#2405) [9d5453716]
- Fix: prevent making multiple get pipeline info requests in workflow launch form [ci skip](#2406) [e21619bd1]
- Fix: set 'Launch.resumeLaunchId' only if it's a resume. (#2427) [a784e635b]
- Fix: possible connectionId null reference exception [ci skip](#2413)
- Bump nf-launcher 21.10.4 based on correto:17.0.1 based image

#### 21.10.3 - 3 Feb

- Enable root users environment when `TOWER_ROOT_USERS` variable is provided [0ba7190e0]

## 2021

#### 21.10.2 - 10 Dec

- Fix NPE error when marking unknown status
- Bump nf-launcher 21.10.5

#### 21.10.1 - 8 Dec

:::note
The `21.10.x` release series starts with `v21.10.1`.
:::

- Add Container registry creds for Azure
- Add Datasets feature
- Add Support custom CE environment variables
- New Workflows Runs list page
- Add support for custom landing page
- Add Display job info on workflow general panel (#2142) (#2151)
- Make hidden params a part of pipeline input form even if not shown + small fix (#2134)
- Parallelize Az metadata retrieval
- Fix Make hidden params a part of pipeline input form even if not shown + small fix (#2134)
- Fix Validate final values of config properties on startup (#2100)
- Fix redisson default connection pool size (#2229)
- Fix Return a bad request when workspaceId is not parsable (#2220) #2205
- Fix race condition on repo pull (#2110)
- Fix grid platform default launch dir (#2037)
- Fix Redirect to the Runs page after launch (#2057)
- Fix Discard deleted entities from name validation queries and rename them (#2052)
- Improve landing page config #1996 #748
- Fix Download hangs when streaming a S3 file (#2005)
- Hide ebsBlockSize field from aws manual config (#2004)
- Refactor Google LifeScience head job execution (#1981)
- Make sure to authenticate the Google storage (#1984)
- Use amazoncorretto:11.0.13 as base image
- Minor schema fetching improvement (#2183)
- Make sure the workflows list query returns the workflows in a workspace even if they have been starred by other users (#2174)
- Bump nf-launcher 21.10.4

#### 21.06.5 - 10 Dec

- Increasing the throttling rate on the ECS agent metadata endpoint (#2338) [51a519691]
- Bump nf-launcher 21.10.5

#### 21.06.4 - 25 Nov

- Increasing the throttling rate on the ECS agent metadata endpoint (#2338)
- Bump nf-launcher 21.10.3

#### 21.06.3 - 19 Nov

- Bump nf-launcher 21.10.1

#### 21.06.2 - 5 Oct

- Fix race condition on repo pull when using Kubernetes platform (#2110) [90b1dbe7c]
- Hide `ebsBlockSize` field from aws manual config (#2004) [24650f47c]
- Connection pool properties log can leak sensitive data [1878a2e4f]
- Changing workspace multiple requests fix (#1985) [5f66be4b0]
- Make sure to authenticate the Google storage (#1984) [398897422]
- Fix Altair infoCli method [f5226d03d]

#### 21.06.1 - 27 Aug

- Fix OpenId attributes blows up response header [7b3c5ae58]
- Fix Mention in the Get started page how setup tower workspace id [b16ead35a]
- Fix Tune AWS client caching timeout [f4ffe10d5](#1950)
- Fix Pipeline params JSON parsing on Windows client #1949
- Fix Add better control of cron/redis config (#1944) [45579b5bd]
- Fix DB migration detected table on foreign schema - Bump migtool 1.0.2 705c905db
- Fix for the case when blur event handler was executed before chip selection event handler #1932
- Fix Bug 1926/Modify bootDiskSize Config Param #1931

#### 21.06.0 - 26 Jul

- Add Support for AWS Host credentials and role-base permissions
- Add Support for AWS EFS storage
- Add ability to specify custom AWS cli path
- Add AWS regions eu-south-1 and af-south-1
- Add uploadChunkSize configuration parameter to abstract k8 provider (#1820)
- Limit compute env error message length
- Invalidate compute envs associated to deleted credentials
- Fix launch form pipelineParameters after navigating to pipeline input form (#1847)
- Fix error report for missing invalid/creds
- Fix GitHub action creation
- Fix Prevent GH delete action hook exception
- Display team id in team page
- Disable index.html caching in nginx.config
- Bump nextflow launcher 21.04.3
- Bump groovy 3.0.8

#### 21.04.9 - 2 Aug

- Fix Nextflow plugins deps

#### 21.04.8 - 14 Jul

- Improve error report for missing/invalid AWS creds [b5c550236]
- Do not trigger config profiles field reset after patching the workflow launch form (#1836) [f863c8cbb]

#### 21.04.7 - 21 Jun

- Add head service account to deployment pod (#1773) [6e0e7281f]
- Parse profiles using the correct revision at launch time (#1572) [e78eda2f2]

#### 21.04.6 - 21 Jun

- Change schema and default params usage (#1737) [f938c7236]
- Fix GitHub action creation (#1721) [b24f0cfb8]
- K8s use deployment for service pod (#1735) [1af27810c]
- Fixed the case when the dropdown was over-shadowing other fields (#1714) [baacf92cc]

#### 21.04.5 - 8 Jun

- k8s head pod custom specs (#1668) [d82a864c8]
- Fix action update settings (#1679) [a485c5d75]
- Allow selecting empty values for schema dropdown fields (#1674) [d27e5b905]

#### 21.04.4 - 3 Jun

- Fix missing scm server & platform [3dc89ece5](#1660)

#### 21.04.3 - 2 Jun

- Fix pattern test validator when the value is empty (#1652) [3cc2923ec]
- Fix navigation dropdown display when user has no CreateOrganization permission (#1655) [5018fd956]

#### 21.04.2 - 1 Jun

- Fix FSx creation failure

#### 21.04.1 - 31 May

- Add timeout on AWS Forge waiters
- Add log response to UI error message (#1602) [2d705289c]
- Reorganize login page (#1635) [9a46f393a]
- Add support for BitBucket server [8c09241e3]
- Fix Missing GitLab token creds (#1631) [c188a76b2]
- Fix action launch user (#1615) #1611 [691fe4c9d]
- Use RegExp.test for json schema pattern validation + small pipeline input form fix (#1619) [d9d2cd317]
- Do not config mail proxy using global proxy settings (#1626) [e1c8b1dab]
- Fix admin project security vulnerabilities (#1637) [972255faf]

#### 21.04.0 - 21 May

- New organizations feature
- New teams feature
- New workspace feature
- New launchpad feature
- Add support for private Git repositories
- Add support for Nextflow timeline downloads
- Fix issues with Compute environment status reporting
- Update Nextflow runtime to version 21.04.0

#### 21.02.5 - 12 May

- Fix S3 log downloads when using fusion feature

#### 21.02.4 - 29 Apr

- Bump nexflow 21.04.0-edge required to fix Bitbucket server

#### 21.02.3 - 21 Apr

- Fix cloud price downloader using Seqera Labs endpoint
- Fix Error message when S3 bucket is not accessible

#### 21.02.2 - 14 Apr

- Fix missing commit ID when resuming execution fails to start

#### 21.02.1 - 12 Apr

- Fix support for custom bitbucket servers
- Bump Nextflow launcher 21.04.0-edge

#### 21.02.0 - 16 Mar

- Add Azure Batch provider
- Add Altair PBS pro provider
- Add sessionId to workflows search-box criteria
- Add support for multiple GLS zones
- Add Grid provider head job options
- Add support for AWS Batch cost percentage
- Add Azure Batch Forge
- Add support for Grid Engine batch scheduler
- Add K8s service pod
- Add support for Tower license
- Improve detection of NF config profiles #1074
- Fix issue on work dir path composition with ending slash
- Fix issue when retrieving non-existing file via SSH/SCP
- Fix issue resolving non-canonical GitHub/Gitlab project name #353
- Fix issue with AWS Batch allocation strategy #931
- Fix phantom job unknown status
- Fix Prevent requeuing of mail with invalid addresses
- Fix issue on creating AWS CE with manual config
- Update backend base image to corretto:11.0.10
- Upgrade to Angular 11
- Use Kubernetes Java-client 10.0.1
- Update nf-launcher to 21.03.0-edge

#### 20.12.4 - 23 March

- Add support for AWS marketplace

#### 20.12.2 - Feb 16

- Fix phantom job status
- Fix invalid email rejection

#### 20.12.1 - 21 Jan

- Fix head job submission to head queue when using batch schedulers eg. Slurm, GridEngine, LSF.

#### 20.12.0 - 11 Jan

- Add support for Kubernetes clusters
- Add support for AWS EKS clusters
- Add support for Google Kubernetes Engine clusters
- Add support for Launch stub-run feature
- Add AWS Batch Fusion mounts
- Enhanced security, API uses bearer auth
- System security improvements
- Upgrade Java runtime to version 11
- Upgrade Micronaut runtime to version 2.1
- Upgrade Nextflow launcher to version 20.12.0-edge

#### 20.10.4 - 11 Jan

- Backend container security fixes
- Improved SSH client debugging

## 2020

#### 20.10.3 - 30 Nov

- Fix migration tool when using MariaDB
- Fix execution issue with Batch forge when creating a new FSx file system
- Fix invalid warn message

#### 20.10.2 - 2 Nov

- Add support for TOWER_LAUNCH_CONTAINER env var [6fd06581f]
- Allow pre-run script to modify launch env [56ed5cca1]
- Fix ebs autoexpand volume issue + add ebs block size [cbdb8b1af]
- Disable cache on problematic cached query (#608) [11ef28e10]

#### 20.10.1 - 27 Oct

- Updated Nextflow launcher container

#### 20.10.0 - 22 Oct

- Add Workflow sharing feature
- Add support for Slurm batch cluster
- Add support for IBM LSF batch cluster
- Add customizable navbar menu
- Add built-in support for MariaDB
- Add built-in support for Google SSO
- Add auth allow-list emails
- Update Java mail 1.6.2
- System security improvements

#### 20.08.0 - 28 Aug

- Add support for AWS FSx mount name to Launch feature
- Add Batch Forge option to to Launch feature
- Add support for GPU instances to Launch feature
- Add Execution and tasks logs view & downloads features
- Add support for Compute env AWS advanced options
- Add Compute environment primary option feature
- Add Pipeline Actions
- Add support for GA4GH WES API (beta)
- Add status & process name filtering to dashboard
- Add favicon for dark theme
- Add login pass-through mechanism
- Fix AWS Batch workflow cancellation
- Fix issue when launching projects w/o config file
- Fix issue on port and scheme forwarding
- Fix local repositories configuration issue
- Improve Workflow general stats tooltips
- Update launch base image to AWS `corretto:262`
- Update MN version 1.3.7

#### 20.06.1 - 12 Aug

- Fix Reverse proxy scheme and port forwarding when using local docker environment

#### 20.06.0 - 16 Jun

- Add Pipeline Launch feature
- Add Pipeline execution cancellation
- UI looks & feel improvements
- Security improvements
- OAuth login improvements
- Add Tomcat DB connection pool
- Upgrade Micronaut runtime to 1.3.3

#### 20.05.1 - 12 May

- Path OpenID connect upgrading MN security to 1.2.3
- Add TOWER_SECURITY_LOGLEVEL env variable for security module debugging

#### 20.05.0 - 28 Apr

- Add support for OpenId connect
- Improve K8s deployment descriptors
- Fix critical issue saving tasks
- Add limit to max records returned
- Fix invalid tag deserialization error
